--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -45,7 +45,7 @@
                             <a href="{% url 'cash_booking' %}" class="text-decoration-none btn btn-primary mb-2"><b>Cash Booking</b></a>
                             <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-success mb-2"><b>Fast Booking</b></a>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-3">
                             <input type="number" name="c_note_num" id="c_note_num" class="form-control" placeholder="Search C. Note Number" maxlength="6">
                         </div>
                     </div>
