--- a/api/templates/edit_drs_details.html
+++ b/api/templates/edit_drs_details.html
@@ -112,6 +112,22 @@
 
 <!-- ########################################## Load jquery here ##########################  -->
 <script>
+    function check_same_entry(num) {
+        var tble = document.getElementById("DrsTable");
+        var isDuplicate = false;
+        for (var i = 1; i < tble.rows.length; i++) {
+            var existingId = tble.rows[i].cells[0].innerHTML;
+            if (existingId === num) {
+                isDuplicate = true;
+                break;
+            }
+        };
+        if (!isDuplicate) {
+            return true
+        } else {
+            return false
+        }
+    };
     $(document).ready(function() {
         $("#area_name").val("{{ headers.area_name.id }}").change();
         $("#delivery_boy").val("{{ headers.deliveryboy_name.id }}").change();
@@ -156,29 +172,34 @@
                     'docket_num': docket_num,
                     'csrfmiddlewaretoken': csr
                 }
-                $.ajax({
-                    url: "{% url 'doc_num_from_booking_to_drs' %}",
-                    type: "POST",
-                    data: drs_doc_data,
-                    success: function(response) {
-                        if (response.status == 1) {
-                            let data = response.data;
-                            $("#docket_number").val("");
-                            var row = '<tr><td>' + docket_num + '</td><td>' + data.origin + '</td><td> <input type="text" class="form-control con_name" value="' + data.name + '" />' + "</td><td><button type='button' id='myButton' class='border-0 bg-transparent text-primary deleteButton'><i class='bi bi-trash3'></i></button></td></tr>";
-                            $('#DrsTable tbody').prepend(row);
-                            var table = document.getElementById("DrsTable");
-                            var rowCount = table.rows.length;
-                            if (rowCount > 1) {
-                                rowCount = rowCount - 1;
-                                document.getElementById("rowCount").textContent = rowCount;
+                var chk_ent = check_same_entry(docket_num);
+                if (chk_ent) {
+                    $.ajax({
+                        url: "{% url 'doc_num_from_booking_to_drs' %}",
+                        type: "POST",
+                        data: drs_doc_data,
+                        success: function(response) {
+                            if (response.status == 1) {
+                                let data = response.data;
+                                $("#docket_number").val("");
+                                var row = '<tr><td>' + docket_num + '</td><td>' + data.origin + '</td><td> <input type="text" class="form-control con_name" value="' + data.name + '" />' + "</td><td><button type='button' id='myButton' class='border-0 bg-transparent text-primary deleteButton'><i class='bi bi-trash3'></i></button></td></tr>";
+                                $('#DrsTable tbody').prepend(row);
+                                var table = document.getElementById("DrsTable");
+                                var rowCount = table.rows.length;
+                                if (rowCount > 1) {
+                                    rowCount = rowCount - 1;
+                                    document.getElementById("rowCount").textContent = rowCount;
+                                } else {
+                                    document.getElementById("rowCount").textContent = 0;
+                                }
                             } else {
-                                document.getElementById("rowCount").textContent = 0;
-                            }
-                        } else {
-                            $('#origin').focus();
-                        };
-                    }
-                });
+                                $('#origin').focus();
+                            };
+                        }
+                    });
+                } else {
+                    alert("Duplicate docket number found.");
+                }
             }
         });
     });
@@ -191,21 +212,27 @@
                 event.preventDefault();
                 var doc_num = $("#docket_number").val();
                 if (doc_num != "") {
-                    var origin = $("#origin option:selected").text();
-                    var con_name = $("#con_name").val();
-                    var row = '<tr><td>' + doc_num + '</td><td>' + origin + '</td><td> <input type="text" class="form-control con_name" value="' + con_name + '" />' + "</td><td><button type='button' id='myButton' class='border-0 bg-transparent text-primary deleteButton'><i class='bi bi-trash3'></i></button></td></tr>";
-                    $('#DrsTable tbody').prepend(row);
-                    $("#docket_number").val("");
-                    $("#con_name").val("");
-                    $('#docket_number').focus();
-                    var table = document.getElementById("DrsTable");
-                    var rowCount = table.rows.length;
-                    if (rowCount > 1) {
-                        rowCount = rowCount - 1;
-                        document.getElementById("rowCount").textContent = rowCount;
+                    var chk_ent = check_same_entry(doc_num);
+                    if (chk_ent) {
+                        var origin = $("#origin option:selected").text();
+                        var con_name = $("#con_name").val();
+                        var row = '<tr><td>' + doc_num + '</td><td>' + origin + '</td><td> <input type="text" class="form-control con_name" value="' + con_name + '" />' + "</td><td><button type='button' id='myButton' class='border-0 bg-transparent text-primary deleteButton'><i class='bi bi-trash3'></i></button></td></tr>";
+                        $('#DrsTable tbody').prepend(row);
+                        $("#docket_number").val("");
+                        $("#con_name").val("");
+                        $('#docket_number').focus();
+                        var table = document.getElementById("DrsTable");
+                        var rowCount = table.rows.length;
+                        if (rowCount > 1) {
+                            rowCount = rowCount - 1;
+                            document.getElementById("rowCount").textContent = rowCount;
+                        } else {
+                            document.getElementById("rowCount").textContent = 0;
+                        }
                     } else {
-                        document.getElementById("rowCount").textContent = 0;
-                    }
+                        alert("Duplicate docket number found.");
+                    };
+
                 } else {
                     alert("Insert Docket number");
                     $('#docket_number').focus();
